BPK-216: Simplifying to duration only to get an MVP out. (+1 squashed commit) Squashed commits: [02f722e] BPK-216: Fixing build and hiding from menu (+1 squashed commit) Squashed commits: [d77f293] BPK-216: Renamed section to Animation (+1 squashed commit) Squashed commits: [004fa1d] BPK-216: Removing Time: Instant (+1 squashed commit) Squashed commits: [dc29cce] BPK-216: Added mixins and sassdoc info (+1 squashed commit) Squashed commits: [9acdcef] BPK-216: Added tokens for time and added to docs page (+1 squashed commit) Squashed commits: [1df731c] BPK-216: Created a new page for Motion, added it to the menu and added content.

--- a/packages/bpk-tokens/tokens/base.scss
+++ b/packages/bpk-tokens/tokens/base.scss
@@ -1,3 +1,19 @@
+/// @group animations
+$bpk-duration-xs: 50ms;
+/// @group animations
+$bpk-duration-sm: 200ms;
+/// @group animations
+$bpk-duration-base: 400ms;
+/// @group animations
+$bpk-duration-lg: 600ms;
+/// @group animations
+$bpk-duration-xl: 800ms;
+/// @group animations
+$bpk-pause-sm: 1500ms;
+/// @group animations
+$bpk-pause-base: 3000ms;
+/// @group animations
+$bpk-pause-lg: 4500ms;
 /// @group radii
 $bpk-border-radius-xs: .1875rem;
 /// @group radii
